--- a/python/new1/pbt_project.yml
+++ b/python/new1/pbt_project.yml
@@ -39,7 +39,30 @@ pipelines:
     dependencies: {}
 datasets: {}
 templates: {}
-jobs: {}
+jobs:
+  jobs/as:
+    name: as
+    description: ''
+    fabricUID: 244
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: small-update
+    scheduleCron: None
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2024-03-21 05:40:06'
+    author: sony@prophecy.io
 gemContainer:
   languageVersion: '3.10'
   gemLibsVersion: 1.3.4.0
