--- a/python/new1/pbt_project.yml
+++ b/python/new1/pbt_project.yml
@@ -1,6 +1,6 @@
 name: ext_new1
 description: ''
-version: 0.0.1
+version: internal1
 author: sony@prophecy.io
 language: python
 buildSystem: ''
@@ -19,19 +19,6 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2024-03-13 07:03:04'
-    datasets:
-      inputs: []
-      outputs: []
-    subgraphs: []
-    dependencies: {}
-  pipelines/dsds:
-    name: dsds
-    description: ''
-    author: sony@prophecy.io
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2024-03-21 05:33:37'
     datasets:
       inputs: []
       outputs: []
@@ -59,19 +46,7 @@ sqlSeeds: {}
 sqlSources: {}
 sqlUnreferencedSources: {}
 sqlPipeline: null
-dependencies:
-- type: plibMaven
-  modifiedAt: '2024-03-21T05:33:43.949074Z'
-  name: plibMaven
-  version: 7.1.82
-  id: '1126953540'
-  createdAt: '2024-03-21T05:33:43.948996Z'
-- type: plibPypi
-  modifiedAt: '2024-03-21T05:33:43.949163Z'
-  name: plibPypi
-  version: 1.8.12
-  id: '450713232'
-  createdAt: '2024-03-21T05:33:43.94913Z'
+dependencies: '[]'
 projectDependencies:
   '42':
     projectUID: 42
