--- a/python/new1/pbt_project.yml
+++ b/python/new1/pbt_project.yml
@@ -59,7 +59,19 @@ sqlSeeds: {}
 sqlSources: {}
 sqlUnreferencedSources: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies:
+- type: plibMaven
+  modifiedAt: '2024-03-21T05:54:32.156776Z'
+  name: plibMaven
+  version: 7.1.82
+  id: '1577458682'
+  createdAt: '2024-03-21T05:54:32.156662Z'
+- type: plibPypi
+  modifiedAt: '2024-03-21T05:54:32.156889Z'
+  name: plibPypi
+  version: 1.8.12
+  id: '1945484793'
+  createdAt: '2024-03-21T05:54:32.156842Z'
 projectDependencies:
   '42':
     projectUID: 42
